--- a/index.html
+++ b/index.html
@@ -4,13 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>UI/UX Designer Kim Ha na</title>
-    <link rel="stylesheet" href="/assets/css/common.css">
+    <link rel="stylesheet" href="/KimHaNa/assets/css/common.css">
 </head>
 <body>
     <div class="wrap">
         <header class="visual">
             <div class="visual-img">
-                <img src="/assets/images/visual_hana.png" alt="UI/UX Designer & Publisher">
+                <img src="/KimHaNa/assets/images/visual_hana.png" alt="UI/UX Designer & Publisher">
             </div>
         </header>
         <main class="introduction">
