--- a/index.html
+++ b/index.html
@@ -19,14 +19,49 @@
         <main class="introduction">
             <h1 class="blind">김하나 이력서</h1>
             <section class="intr01">
-                <h2>About Me</h2>
-                <p>안녕하세요. UI/UX 디자이너 김하나입니다.<br> 시각디자인과를 졸업하고 약 4년 여간 웹디자인과 코딩 업무를 하였고, 그 후 웹퍼블리셔로 전향하여 일해왔습니다.
+                <h2 class="mt-24">About Me</h2>
+                <p class="mt-24">안녕하세요. UI/UX 디자이너 김하나입니다.<br> 시각디자인과를 졸업하고 약 4년 여간 웹디자인과 코딩 업무를 하였고, 그 후 웹퍼블리셔로 전향하여 일해왔습니다.
                     최근 피그마를 접하며 UI/UX 디자인에 관심이 생겨 다시 디자이너로서 일해보려합니다.<br>
-                    어디서든 잘 적응하는 편이고 주어진 일에 책임감을 가지고 임합니다. </p>
+                    어디서든 잘 적응하는 편이고 주어진 일에 책임을 다합니다. </p>
+            </section>
+            <section class="intr02">
+                <h2 class="mt-100">History</h2>
+                <div class="mt-24">
+                    <img src="/KimHaNa/assets/images/img_history.png" alt="">
+                    <ul class="blind">
+                        <li>1983년 12월 출생</li>
+                        <li>2002년 03월 한밭대학교 시각디자인학과 입학/ 2006년 02월 졸업</li>
+                        <li>2005년 08월 웹디자이너 시작/ 2009년 12월 끝</li>
+                        <li>2010년 03월 웹퍼블리셔 시작 / 2022년 12월 끝</li>
+                        <li>현재 UI/UX 디자인너</li>
+                    </ul>
+                </div>
+            </section>
+            <section class="intr03">
+                <h2 class="mt-100">Skills</h2>
+                <ul class="mt-24">
+                    <li>
+                        <strong>Frontend</strong>
+                        <span class="mt-4">Html, css, Javascript</span>
+                    </li>
+                    <li>
+                        <strong>Design</strong>
+                        <span class="mt-4">Figma, Photoshop, Illustrator</span>
+                    </li>
+                </ul>
             </section>
         </main>
-        <footer>
-            
+        <footer class="mt-120">
+            <ul>
+                <li>
+                    <strong>Phone</strong>
+                    <span>010-4660-1090</span>
+                </li>
+                <li>
+                    <strong>Email</strong>
+                    <span>hnkim369@gmail.com</span>
+                </li>
+            </ul>
         </footer>
     </div>
 </body>
