--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
                 </ul>
             </section>
         </main>
-        <footer class="mt-120">
+        <footer>
             <ul>
                 <li>
                     <strong>Phone</strong>
