--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                         <li>2002년 03월 한밭대학교 시각디자인학과 입학/ 2006년 02월 졸업</li>
                         <li>2005년 08월 웹디자이너 시작/ 2009년 12월 끝</li>
                         <li>2010년 03월 웹퍼블리셔 시작 / 2022년 12월 끝</li>
-                        <li>현재 UI/UX 디자인너</li>
+                        <li>현재 UI/UX 디자인너 &amp; 웹퍼블리셔</li>
                     </ul>
                 </div>
             </section>
